[tool.poetry]
name = "beancount-commerzbank"
version = "0.2.0"
description = "Beancount Importer for Commerzbank (DE) CSV exports"
authors = ["Siddhant Goel <me@sgoel.org>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["beancount", "cli-accounting", "finance"]
repository = "https://github.com/siddhantgoel/beancount-commerzbank"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true,python = "^3.6"}
flake8 = "^3.7"
pytest = "^4.4"
beancount = "^2.2"

[tool.black]
line-length = 79
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
